removed aggressiveopt